# dotty

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: release.yaml
.github/workflows/: build.yaml  label-pr.yaml  lint-pr.yaml  release.yaml  tag.yaml
src/: cmds.rs  config.rs  main.rs
src/utils/: fs.rs  git.rs  mod.rs  path.rs  string.rs
